[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = "True"
exclude = ["setup.py"]

[[tool.mypy.overrides]]
module = "loopialib.*"

# loopialib is not typed and there are no stub files available. This will not be a problem once we remove
# loopialib, which is already a work in progress.
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "tldextract.*"

# tldextract uses an __init__.py file to implicitly reexport TLDExtract, so we need to allow this
implicit_reexport = "True"
