[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = "True"
exclude = ["setup.py", "venv"]

[[tool.mypy.overrides]]
module = "tldextract.*"

# tldextract uses an __init__.py file to implicitly reexport TLDExtract, so we need to allow this
implicit_reexport = "True"
